[tool.poetry]
name = "ai_toolbox"
version = "0.1.0"
description = ""
authors = ["Theodore Aptekarev <aptekarev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tools" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.1"
pandas = "^2.2.2"
pydub = "^0.25.1"
tqdm = "^4.64.1"
pillow = "^10.3.0"
scipy = "^1.10.0"
ipykernel = "^6.20.1"
ipywidgets = "^8.0.4"
accelerate = "^0.29.3"
papermill = "^2.4.0"
python-dotenv = "^1.0.1"
torch = "^2.2.2"
torchaudio = "^2.2.2"
diffusers = "^0.27.2"
transformers = "^4.40.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.219"
poetry = "^1.8.2"

[tool.ruff]
line-length = 122
target-version = "py38"
# This is an introductory addition of ruff. We should look to adding:
# D: pydocstyle, PD: pandas-vet, I: isort
# All options here: https://github.com/charliermarsh/ruff#supported-rules
select = ["E", "W", "F", "Q", "W", "S", "UP"]
ignore = ["S101", "S105", "S106", "S107"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["E402"]

[tool.ruff.flake8-import-conventions.aliases]
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
