[tool.poetry]
name = "echo-chamber"
version = "0.1.0"
description = ""
authors = ["Theodore Aptekarev <aptekarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.2"
pandas = "^2.0.3"
pydub = "^0.25.1"
tqdm = "^4.66.2"
pillow = "^9.4.0"
scipy = "^1.11.4"
ipykernel = "^5.5.6"
ipywidgets = "^7.7.1"
accelerate = "^0.29.3"
papermill = "^2.4.0"
python-dotenv = "^0.17.1"
torch = "^2.2.1"
torchaudio = "^2.2.1"
diffusers = "^0.27.2"
transformers = "^4.40.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.219"
poetry = "^1.8.2"

[tool.ruff]
line-length = 122
target-version = "py38"
# This is an introductory addition of ruff. We should look to adding:
# D: pydocstyle, PD: pandas-vet, I: isort
# All options here: https://github.com/charliermarsh/ruff#supported-rules
select = ["E", "W", "F", "Q", "W", "S", "UP"]
ignore = ["S101", "S105", "S106", "S107"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["E402"]

[tool.ruff.flake8-import-conventions.aliases]
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
